# kata-exercise

./: CMakeLists.txt
src/: CMakeLists.txt  weatherParser.cpp  weatherParser.h  xmas_light.h  xmas_light_main.cpp  xmas_light_new.h
test/: CMakeLists.txt  weatherParserUT.cpp  xmas_light_new_unittest.cpp  xmas_light_unittest.cpp
